heroBanner and searchBar component completed

--- a/src/App.css
+++ b/src/App.css
@@ -52,7 +52,7 @@ body {
     width: 729px;
     height: 742px;
   }
-  
+  /* done */
   .hero-banner-img {
     position: absolute;
     right: 40px;
