--- a/src/components/SearchExercises/SearchExercises.module.css
+++ b/src/components/SearchExercises/SearchExercises.module.css
@@ -8,6 +8,7 @@
     border: none;
     color: whitesmoke;
     font-weight: bolder;
+    font-size: 20px;
     border: solid 2px #f8b10e;
 }
 .searchButton:hover {
@@ -18,6 +19,6 @@
     .form {
         display: grid;
         justify-items: center;
-        margin-left: 24px;
+        margin-left: auto;
     }
 }
