detail component complete

--- a/src/App.css
+++ b/src/App.css
@@ -48,10 +48,10 @@ body {
     flex-wrap: wrap;
   }
   
-  .detail-image {
+  /* .detail-image {
     width: 729px;
     height: 742px;
-  }
+  } */
   /* done */
   .hero-banner-img {
     position: absolute;
