--- a/src/components/SearchExercises/SearchExercises.module.css
+++ b/src/components/SearchExercises/SearchExercises.module.css
@@ -6,13 +6,13 @@
     padding: 16px;
     border-radius: 8px;
     border: none;
-    color: whitesmoke;
+    color: #21325f;
     font-weight: bolder;
     font-size: 20px;
     border: solid 2px #f8b10e;
 }
 .searchButton:hover {
-    background-color: whitesmoke;
+    background-color: #21325f;
     color: #f8b10e;
 }
 @media (max-width: 800px) {
