similar exercises footer and responsive working
no bugs

--- a/src/components/Detail/Detail.module.css
+++ b/src/components/Detail/Detail.module.css
@@ -1,6 +1,8 @@
 .detail-image {
     width: 600px;
     height: 700px;
+    border-radius: 12px;
+    border: dotted 1px #f8b10e;
   }
   .icon {
     border: none;
